<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navhome"
        android:icon="@drawable/baseline_home_white_18dp"
        android:title="@string/navhome"
         />
    <item
        android:id="@+id/navcart"
        android:icon="@drawable/baseline_shopping_cart_white_18dpsmall"
        android:title="@string/navcart" />
    <item
        android:id="@+id/navconfg"
        android:icon="@drawable/baseline_construction_white_18dp"
        android:title="@string/navconfg"
        />

    <item
        android:id="@+id/navprofile"
        android:icon="@drawable/baseline_account_box_white_18dp"
        android:title="@string/navprofile"
        />

</menu>