<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#414343"
    android:backgroundTint="#636363"
    android:orientation="vertical"
    tools:context=".AdminPage">

    <TextView
        android:id="@+id/textView_adminPage"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:fontFamily="@font/doppio_one"
        android:text="@string/textView_adminPage"
        android:textColor="@color/textColor"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="406dp"
        app:srcCompat="@drawable/pcpart4" />


    <Button
        android:id="@+id/btn_adminAddPart"
        android:layout_width="match_parent"
        android:layout_height="70dp"

        android:backgroundTint="@color/btn_adminAddPart"
        android:fontFamily="@font/doppio_one"
        android:text="@string/textAdmin_add_part"
        android:textColor="#000000" />

    <Button
        android:id="@+id/btn_adminSelectPart"
        android:layout_width="match_parent"
        android:layout_height="70dp"

        android:backgroundTint="@color/btn_adminViewPart"
        android:fontFamily="@font/doppio_one"
        android:text="@string/textAdmin_select_part"
        android:textColor="#000000" />

    <Button
        android:id="@+id/btn_adminHome"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:backgroundTint="@color/btn_adminProfile"
        android:fontFamily="@font/doppio_one"
        android:text="@string/textAdmin__profile"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</LinearLayout>